# easyaudiostream

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  pythonpublish.yml
easyaudiostream/: __init__.py  __main__.py  _capabilities.py  audio.py  mic.py
sandbox/: mic_echo.py  test_file_formats.py  test_stream.py
